# data-quality-great-expectations

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
airflow/dags/: dag_etl_taxi_data.py
diagrams/: wap_architecture.excalidraw
gx/: .gitignore  great_expectations.yml
gx/checkpoints/: checkpoint nb.json  checkpoint.json
gx/expectations/: .ge_store_backend_id  sql_taxi_table.json  taxi_suite_checks.json
gx/report/: config_variables.yml
gx/report/data_docs/local_site/: index.html
gx/report/validations/: .ge_store_backend_id
gx/uncommitted/: config_variables.yml
gx/uncommitted/validations/: .ge_store_backend_id
gx/validation_definitions/: validation definition nb.json  validation definition.json
jupyter-notebooks/: great_exp.ipynb  send_data_sql.ipynb
jupyter-notebooks/gx/: great_expectations.yml
jupyter-notebooks/gx/checkpoints/: checkpoint.json
jupyter-notebooks/gx/expectations/: .ge_store_backend_id  taxi_check.json
logs/: my_app.log.jsonl
logs/logging_json/: logging_config.json
notes/: notes.md
scripts/: create_production_taxi_data_table.sql  create_stage_taxi_data_table.sql  create_taxi_data.sql
src/config/: config.py
src/great_expectations/: expectations.py
src/great_expectations_checker/: base_checker.py  pandas_checker.py  postgres_checker.py
src/utils/: data_extractor.py  data_loader.py  my_logger.py
tests/: test_base_checker.py  test_data_extractor.py  test_data_loader.py  test_expectations.py  test_main.py  test_my_logger.py  test_pandas_checker.py  test_postgres_checker.py
(+38 files in other folders)
