[project]
name = "data-quality-great-expectations-project"
version = "0.1.1"
description = ""
authors = [
    {name = "Matheus"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "great-expectations (>=1.3.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

