[project]
name = "data-quality-great-expectations-project"
version = "0.1.1"
description = "A project to implement data quality checks using Great Expectations."
authors = [
    {name = "Matheus"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "great-expectations (>=1.3.3,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (<2.0)",
    "apache-airflow (>=2.10.5,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.6"

[[tool.poetry.packages]]
include = "src"

[tool.poetry.scripts]
main = "main:main"